--- a/contact.html
+++ b/contact.html
@@ -2,45 +2,39 @@
 <html>
 
 <head>
-	<title>Contact || City University</title>
-	<meta charset="utf-8">
-
-	<link rel="stylesheet" type="text/css" href="CSS/style.css">
-	<link rel="stylesheet" type="text/css"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Home || City University</title>
+    <meta charset="utf8">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 
 
 
 <body>
-	<!-- Nav bar -->
-	<div class="row">
-	</div class="col-md-12">
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-		<div class="container">
-			<a href="index.html" class="navbar-brand">City University</a>
-		</div>
-		<div class="container">
-			<ul class="navbar-nav ms-auto">
-				<li class="nav-item">
-					<a class="nav-link active" href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="contact.html">Contact Us</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="aboutus.html">About US</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="cv.html">CV</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-</div>
-</div>
+    <!-- Nav bar -->
+    <nav class="container navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">City University</a>
+        </div>
+        <div class="container-fluid">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cv.html">CV</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
 
 
@@ -48,87 +42,62 @@
 
 
 
-<div class="row mt-5 pt-0">
+    <div class="container bg-dark">
+        <div class="row mt-5">
 
 
-	<div id="sidebar" class="container col-md-2 nav-link text-dark navbar-light bg-primary">
-		<span class=" badge rounded-pill bg-warning text-dark">
-			Left Sidebar
-		</span>
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link active" href="index.html">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="contact.html">Contact Us</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="aboutus.html">About US</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="cv">CV</a>
-			</li>
+            <div id="sidebar" class="col col-md-2 nav-link text-dark navbar-light bg-primary">
+                <span class=" bg-warning text-dark">
+                Left Sidebar
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cv.html">CV</a>
+                    </li>
 
-		</ul>
-
-	</div>
-
-
-	<div class="col-md-10 bg-secondary container pt-3">
-		<div>
-			<h3>Permanent Campus, <span class="text-danger">City University</span></h3>
-			<p class="lead">
-				Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh
-
-				Cell: +880 1854-640476,
-
-				+880 1862-213214 <br>
-
-				E-mail: ar@cityuniversity.edu.bd
-			</p>
-		</div>
-		<div>
-			<h3>Permanent Campus, <span class="text-danger">City University</span></h3>
-			<p class="lead">
-				Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh
-
-				Cell: +880 1854-640476,
-
-				+880 1862-213214 <br>
-
-				E-mail: ar@cityuniversity.edu.bd
-			</p>
-		</div>
-		<div>
-			<h3>Permanent Campus, <span class="text-danger">City University</span></h3>
-			<p class="lead">
-				Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh
-
-				Cell: +880 1854-640476,
-
-				+880 1862-213214 <br>
-
-				E-mail: ar@cityuniversity.edu.bd
-			</p>
-		</div>
-	</div>
+                </ul>
+            </span>
+            </div>
 
 
+            <div id="content" class="col col-md-10 bg-secondary container-fluid">
+                <p>
+                    <h1>
+                        About City University
+                    </h1>
 
-</div>
-<footer class="p-5 bg-dark text-white text-center position-relative">
-	<div class="container">
-		<p class="lead">
-			Copy wright &copy; Md. Shabbir Hossen
-			<a href="" class="position-absulate botom-0 end-0 p-5">
-				<i class="bi bi-arrow-up-circle bi-color-light h1"></i>
-			</a>
+                    It was in Mid-autumn 2002 that City University started with fifteen students, two departments, meager resources, and a group of dedicated and dynamic teachers. 16 years since 2002, we have now Eight thousand brilliant students, six computer laboratories,
+                    two mechanical workshop and laboratories, one digital laboratory, physics and chemistry laboratories, an extensive textile laboratory, ten booming departments (with two other departments in the process of being organized), well-trained
+                    teachers, a spirited team of support staff, and a dedicated management group. What started as an experimental project has now been transformed into a prestigious educational institute with a wide range of well educated, both local
+                    and global.
+                </p>
 
-		</p>
+            </div>
 
-	</div>>
+        </div>
+    </div>
 
-</footer>
+    <footer class="container p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+            <p class="lead">
+                Copy wright &copy; Md. Shabbir Hossen
+                <a href="" class="position-absulate botom-0 end-0 p-5">
+                    <i class="bi bi-arrow-up-circle bi-color-light h1"></i>
+                </a>
+
+            </p>
+
+        </div>>
+
+    </footer>
 
 </body>
 
