--- a/aboutus.html
+++ b/aboutus.html
@@ -5,8 +5,7 @@
     <title>Home || City University</title>
     <meta charset="utf8">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <link rel="stylesheet" type="text/css"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 
@@ -14,7 +13,7 @@
 
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="container navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container">
             <a href="index.html" class="navbar-brand">City University</a>
         </div>
@@ -43,12 +42,12 @@
 
 
 
+    <div class="container bg-dark">
+        <div class="row mt-5">
 
-    <div class="row mt-5">
 
-
-        <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
-            <span class=" bg-warning text-dark">
+            <div id="sidebar" class="col col-md-2 nav-link text-dark navbar-light bg-primary">
+                <span class=" bg-warning text-dark">
                 Left Sidebar
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -61,44 +60,32 @@
                         <a class="nav-link" href="aboutus.html">About US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cv">CV</a>
+                        <a class="nav-link" href="cv.html">CV</a>
                     </li>
 
                 </ul>
             </span>
-        </div>
+            </div>
 
 
-        <div id="content" class="col-md-8 bg-secondary container-fluid">
-            <p>
-                <h1>
-                    About City University
-                </h1>
+            <div id="content" class="col col-md-10 bg-secondary container-fluid">
+                <p>
+                    <h1>
+                        About City University
+                    </h1>
 
-                It was in Mid-autumn 2002 that City University started with fifteen students, two departments,
-                meager resources, and a group of dedicated and dynamic teachers. 16 years since 2002, we have now Eight
-                thousand
-                brilliant students, six computer laboratories, two mechanical workshop and laboratories, one digital
-                laboratory,
-                physics and chemistry laboratories, an extensive textile laboratory, ten booming departments (with two other
-                departments in
-                the process of being organized), well-trained teachers, a spirited team of support staff, and a dedicated
-                management group.
-                What started as an experimental project has now been transformed into a prestigious educational institute
-                with a wide range of well educated, both local and global.
-            </p>
+                    It was in Mid-autumn 2002 that City University started with fifteen students, two departments, meager resources, and a group of dedicated and dynamic teachers. 16 years since 2002, we have now Eight thousand brilliant students, six computer laboratories,
+                    two mechanical workshop and laboratories, one digital laboratory, physics and chemistry laboratories, an extensive textile laboratory, ten booming departments (with two other departments in the process of being organized), well-trained
+                    teachers, a spirited team of support staff, and a dedicated management group. What started as an experimental project has now been transformed into a prestigious educational institute with a wide range of well educated, both local
+                    and global.
+                </p>
+
+            </div>
 
         </div>
-
-        <div id="rightbar" class="col-md-2 bg-primary container-fluid">
-            <span class="badge rounded-pill bg-warning text-dark">Right sidebar
-
-            </span>
-        </div>
-
     </div>
 
-    <footer class="p-5 bg-dark text-white text-center position-relative">
+    <footer class="container p-5 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead">
                 Copy wright &copy; Md. Shabbir Hossen
