--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="aboutus.html">About US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cv">CV</a>
+                    <a class="nav-link" href="cv.html">CV</a>
                 </li>
 
             </ul>
@@ -260,7 +260,7 @@
 
             </p>
 
-        </div>>
+        </div>
 
     </footer>
 </body>
