--- a/aboutus.html
+++ b/aboutus.html
@@ -41,11 +41,9 @@
 
 
 
-
+    <!-- Main Content -->
     <div class="container bg-dark">
         <div class="row mt-5">
-
-
             <div id="sidebar" class="col col-md-2 nav-link text-dark navbar-light bg-primary">
                 <span class=" bg-warning text-dark">
                 Left Sidebar
@@ -62,7 +60,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cv.html">CV</a>
                     </li>
-
                 </ul>
             </span>
             </div>
@@ -98,7 +95,6 @@
         </div>>
 
     </footer>
-
+    
 </body>
-
 </html>
