--- a/aboutus.html
+++ b/aboutus.html
@@ -45,8 +45,7 @@
     <div class="container bg-dark">
         <div class="row mt-5">
             <div id="sidebar" class="col col-md-2 nav-link text-dark navbar-light bg-primary">
-                <span class=" bg-warning text-dark">
-                Left Sidebar
+                <span class=" badge rounded-pill bg-warning text-dark">Left Sidebar</span>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home</a>
@@ -61,7 +60,7 @@
                         <a class="nav-link" href="cv.html">CV</a>
                     </li>
                 </ul>
-            </span>
+
             </div>
 
 
@@ -92,9 +91,12 @@
 
             </p>
 
-        </div>>
+        </div>
 
     </footer>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+    </script>
 </body>
+
 </html>
