--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,8 @@
 
     <div class="container bg-dark">
         <div class="row mt-5">
-
-
             <div id="sidebar" class="col col-md-2 nav-link text-dark navbar-light bg-primary">
-                <span class=" bg-warning text-dark">
-                Left Sidebar
+                <span class="badge rounded-pill bg-warning text-dark">Left Sidebar</span>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home</a>
@@ -62,9 +59,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cv.html">CV</a>
                     </li>
-
                 </ul>
-            </span>
+
             </div>
 
 
@@ -92,12 +88,13 @@
                 <a href="" class="position-absulate botom-0 end-0 p-5">
                     <i class="bi bi-arrow-up-circle bi-color-light h1"></i>
                 </a>
-
             </p>
-
-        </div>>
-
+        </div>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+    </script>
 </body>
+
 </html>
