--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>CV</title>
+    <title>CV Form</title>
     <meta charset="utf8">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -28,7 +28,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="cv.html">CV</a>
                 </li>
-
             </ul>
         </div>
     </nav>
@@ -239,27 +238,26 @@
             <div class="col-md-6">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-
-
         </form>
-
-
-
-
     </div>
+
+
     <footer class="p-5 bg-primary text-white text-center position-relative container">
-        City University
         <div class="container">
             <p class="lead">
                 Copy wright &copy; Md. Shabbir Hossen
                 <a href="" class="position-absulate botom-0 end-0 p-5">
-                    <i class="bi bi-arrow-up-circle h1"></i>
+                    <i class="  h1"></i>
                 </a>
-
             </p>
 
         </div>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+    </script>
+
 </body>
+
 </html>
