--- a/post1.html
+++ b/post1.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand">City University</a>
         </div>
-        <div class="container">
+        <div class="container-fluid">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Home</a>
@@ -130,7 +130,6 @@
         </div>
 
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
     </script>
 </body>
