--- a/post3.html
+++ b/post3.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand">City University</a>
         </div>
-        <div class="container">
+        <div class="container-fluid">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Home</a>
@@ -80,6 +80,7 @@
     <div class="container">
 
         <div class="row">
+
             <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
                 <span class=" badge rounded-pill bg-warning text-dark">
                     Left Sidebar
@@ -103,19 +104,17 @@
 
             <div class="col-md-8 bg-secondary">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Cityuniversycam.png/1200px-Cityuniversycam.png" alt="" class="container">
-
-
-
             </div>
 
             <div id="rightbar" class="col-md-2 bg-primary container-fluid">
-                <span class="badge rounded-pill bg-warning text-dark">Right sidebar
-
-            </span>
+                <span class="badge rounded-pill bg-warning text-dark">Right sidebar</span>
             </div>
+
         </div>
+
     </div>
 
+    <!--This Is Footer-->
     <footer class="container p-4 bg-dark text-white text-center position-relative">
         City University
         <div class="container">
@@ -124,15 +123,13 @@
                 <a href="" class="position-absulate botom-0 end-0">
                     <i class="bi bi-arrow-up-circle bi-color-dark h1"></i>
                 </a>
-
             </p>
-
         </div>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
     </script>
+
 </body>
 
 </html>
