--- a/contact.html
+++ b/contact.html
@@ -65,16 +65,15 @@
 
 
             <div id="content" class="col col-md-10 bg-secondary container-fluid">
-                <p>
-                    <h1>
-                        About City University
-                    </h1>
+                <div class="row m-5">
+                    <div class="col bg-warning">Shabbir
 
-                    It was in Mid-autumn 2002 that City University started with fifteen students, two departments, meager resources, and a group of dedicated and dynamic teachers. 16 years since 2002, we have now Eight thousand brilliant students, six computer laboratories,
-                    two mechanical workshop and laboratories, one digital laboratory, physics and chemistry laboratories, an extensive textile laboratory, ten booming departments (with two other departments in the process of being organized), well-trained
-                    teachers, a spirited team of support staff, and a dedicated management group. What started as an experimental project has now been transformed into a prestigious educational institute with a wide range of well educated, both local
-                    and global.
-                </p>
+                    </div>
+                    <div class="col bg-danger">Hossen
+
+                    </div>
+
+                </div>
 
             </div>
 
