--- a/post2.html
+++ b/post2.html
@@ -102,34 +102,27 @@
             </div>
 
 
-            <div class="col-md-8 bg-secondary">
+            <div class="col-md-10 bg-secondary">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Cityuniversycam.png/1200px-Cityuniversycam.png" alt="" class="container">
 
 
 
             </div>
 
-            <div id="rightbar" class="col-md-2 bg-primary container-fluid">
-                <span class="badge rounded-pill bg-warning text-dark">Right sidebar
 
-            </span>
-            </div>
         </div>
     </div>
 
-    <footer class="container p-4 bg-dark text-white text-center position-relative">
-        City University
+    <!--Footer-->
+    <footer class="container p-5 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead ">
                 Copy wright &copy; Md. Shabbir Hossen
                 <a href="" class="position-absulate botom-0 end-0">
-                    <i class="bi bi-arrow-up-circle bi-color-dark h1"></i>
+                    <i class="bi bi-arrow-up-circle bi-color-white h1"></i>
                 </a>
-
             </p>
-
         </div>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
