--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,12 @@
 
             <div id="content" class="col col-md-10 bg-secondary container-fluid">
                 <div class="row m-5">
+                    <div class="col col-md-12 bg-primary">
+                        <h1 text-light>
+                            Contacts
+                        </h1>
+
+                    </div>
                     <div class="col bg-warning">Shabbir
 
                     </div>
