--- a/contact.html
+++ b/contact.html
@@ -67,15 +67,28 @@
             <div id="content" class="col col-md-10 bg-secondary container-fluid">
                 <div class="row m-5">
                     <div class="col col-md-12 bg-primary">
-                        <h1 text-light>
+                        <h1 class="text-light text-center">
                             Contacts
                         </h1>
+                    </div>
+
+                    <div class="col bg-warning p-3">
+                        <p>
+                            <h2>Permanent Campus </h2>
+                            <h3>City University</h3>
+                            Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh <br> Cell: +880 1854-640476, +880 1862-213214 <br> E-mail: ar@cityuniversity.edu.bd
+
+                        </p>
 
                     </div>
-                    <div class="col bg-warning">Shabbir
 
-                    </div>
-                    <div class="col bg-danger">Hossen
+                    <div class="col bg-danger p-3">
+                        <p>
+                            <h2>City Campus</h2>
+                            <h3>City University</h3>
+                            13/A, Panthapath, Dhaka-1215, Bangladesh <br> Phone: 44819070, 44819050, <br>Cell: 01819813111, 01778149097 <br> E-mail: ar@cityuniversity.edu.bd
+                        </p>
+
 
                     </div>
 
