--- a/contact.html
+++ b/contact.html
@@ -43,28 +43,27 @@
 
 
     <div class="container bg-dark">
-        <div class="row mt-5">
-            <div id="sidebar" class="col col-md-2 nav-link text-dark navbar-light bg-primary">
+        <div class="row mt-5 pt-5">
+            <div id="sidebar" class=" col col-md-2 nav-link text-dark navbar-light bg-primary">
                 <span class="badge rounded-pill bg-warning text-dark">Left Sidebar</span>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link active" href="contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About US</a>
+                        <a class="nav-link active" href="aboutus.html">About US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cv.html">CV</a>
+                        <a class="nav-link active" href="cv.html">CV</a>
                     </li>
                 </ul>
-
             </div>
 
 
-            <div id="content" class="col col-md-10 bg-secondary container-fluid">
+            <div id="content" class="col col-md-10 bg-secondary">
                 <div class="row m-5">
                     <div class="col col-md-12 bg-primary">
                         <h1 class="text-light text-center">
