--- a/cv.html
+++ b/cv.html
@@ -63,39 +63,39 @@
                 <label class="form-label">Gender</label>
 
                 <select class="form-select">
-					<option>...</option>
-					<option>Male</option>
-					<option>Female</option>
-					<option>Others</option>
-				</select>
+                    <option>...</option>
+                    <option>Male</option>
+                    <option>Female</option>
+                    <option>Others</option>
+                </select>
             </div>
             <div class="col-md-4">
                 <label class="form-label">Religion</label>
                 <select class="form-select">
-					<option>...</option>
-					<option>Islam</option>
-					<option>Hindu</option>
-					<option>Boddho</option>
-					<option>Christan</option>
-				</select>
+                    <option>...</option>
+                    <option>Islam</option>
+                    <option>Hindu</option>
+                    <option>Boddho</option>
+                    <option>Christan</option>
+                </select>
             </div>
             <div class="col-md-4">
                 <label class="form-label">Nationality</label>
                 <select class="form-select">
-					<option>...</option>
-					<option>Bangladeshi</option>
-					<option>Indian</option>
-					<option>Others</option>
-				</select>
+                    <option>...</option>
+                    <option>Bangladeshi</option>
+                    <option>Indian</option>
+                    <option>Others</option>
+                </select>
             </div>
             <div class="col-md-4">
                 <label class="form-label">Marital Status</label>
                 <select class="form-select">
-					<option>...</option>
-					<option>Married</option>
-					<option>Unmarried</option>
-					<option>Widow</option>
-				</select>
+                    <option>...</option>
+                    <option>Married</option>
+                    <option>Unmarried</option>
+                    <option>Widow</option>
+                </select>
             </div>
             <div class="col-md-4">
                 <label class="form-label">National Id</label>
@@ -111,25 +111,25 @@
             </div>
             <div class="col-md-12">
                 <label class="form-label">Present Address</label required>
-				<input type="text" class="form-control">
-			</div>
-			<div class="col-md-12">
-				<label class="form-label">Permanent Address</label required>
-				<input type="text" class="form-control">
-			</div>
-			<div>
-				<h4>Bachelor/Honors</h4>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Examinations</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-12">
+                <label class="form-label">Permanent Address</label required>
+                <input type="text" class="form-control">
+            </div>
+            <div>
+                <h4>Bachelor/Honors</h4>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Examinations</label>
                 <select class="form-select">
-					<option>...</option>
-					<option>Bachelor of Science (BSc)</option>
-					<option>Bachelor of Arts (BA)</option>
-					<option>Bachelor of Commerce (BCom)</option>
-					<option>Bachelor in Business Adminestrations (BBA)</option>
-					<option>Bachelor of Medicine and Bachelor of Surgery (MBBS)</option>
-				</select>
+                    <option>...</option>
+                    <option>Bachelor of Science (BSc)</option>
+                    <option>Bachelor of Arts (BA)</option>
+                    <option>Bachelor of Commerce (BCom)</option>
+                    <option>Bachelor in Business Adminestrations (BBA)</option>
+                    <option>Bachelor of Medicine and Bachelor of Surgery (MBBS)</option>
+                </select>
             </div>
             <div class="col-md-6">
                 <label class="form-label">Concentration/ Major/Group</label>
@@ -162,15 +162,15 @@
             <div class="col-md-6">
                 <label class="form-label">Concentration/ Major/Group</label>
                 <select class="form-select">
-					<option>...</option>
-					<option>Science</option>
-					<option>Arts</option>
-					<option>Commerce</option>
-					<option>Diploma in Electrical</option>
-					<option>Diploma in Civil</option>
-					<option>Diploma in Computer</option>
-					<option>Diploma in Electronics</option>
-				</select>
+                    <option>...</option>
+                    <option>Science</option>
+                    <option>Arts</option>
+                    <option>Commerce</option>
+                    <option>Diploma in Electrical</option>
+                    <option>Diploma in Civil</option>
+                    <option>Diploma in Computer</option>
+                    <option>Diploma in Electronics</option>
+                </select>
             </div>
 
             <div class="col-md-6">
@@ -202,12 +202,12 @@
             <div class="col-md-6">
                 <label class="form-label">Concentration/ Major/Group</label>
                 <select class="form-select">
-					<option>...</option>
-					<option>Science</option>
-					<option>Arts</option>
-					<option>Commerce</option>
-					<option>Vocational</option>
-				</select>
+                    <option>...</option>
+                    <option>Science</option>
+                    <option>Arts</option>
+                    <option>Commerce</option>
+                    <option>Vocational</option>
+                </select>
             </div>
 
             <div class="col-md-6">
@@ -246,8 +246,8 @@
         <div class="container">
             <p class="lead">
                 Copy wright &copy; Md. Shabbir Hossen
-                <a href="" class="position-absulate botom-0 end-0 p-5">
-                    <i class="  h1"></i>
+                <a href="" class="position-absulate botom-0 end-0 p-5 bg-dark">
+                    <i class=" h1">^</i>
                 </a>
             </p>
 
