--- a/cv.html
+++ b/cv.html
@@ -245,10 +245,8 @@
     <footer class="p-5 bg-primary text-white text-center position-relative container">
         <div class="container">
             <p class="lead">
-                Copy wright &copy; Md. Shabbir Hossen
-                <a href="" class="position-absulate botom-0 end-0 p-5 bg-dark">
-                    <i class=" h1">^</i>
-                </a>
+                &copy; Md. Shabbir Hossen
+
             </p>
 
         </div>
