--- a/index.html
+++ b/index.html
@@ -119,11 +119,7 @@
     <footer class="container p-4 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead ">
-                Copy wright &copy; Md. Shabbir Hossen
-                <a href="" class="position-absulate botom-0 end-0">
-                    <i class="bi bi-arrow-up-circle bi-color-dark h1"></i>
-                </a>
-
+                &copy; Md. Shabbir Hossen
             </p>
 
         </div>
